--- a/public/stylesheets/projectDetail.css
+++ b/public/stylesheets/projectDetail.css
@@ -165,6 +165,10 @@
   padding: 8px var(--spacing-sm);
 }
 
+.project-detail-subtitle {
+  margin-top: var(--spacing-xxs);
+}
+
 @media (max-width: 600px) {
   .dashboard {
     width: 95%;
@@ -192,7 +196,7 @@
 
   .header-button,
   .header-button:has(> svg) {
-    padding: 2px var(--spacing-sm);
+    padding: 2px var(--spacing-xs);
   }
 
   .dashboard {
